# mamba

./: .gitignore  README.md  burajiru.config.jsonc  chire_config.json5  chiri_config.json5  draft.md
cpp/: CMakeLists.txt
cpp/include/alpha/mamba/: list.hpp  mamba.hpp  string.hpp
cpp/include/beta/mamba/: container_traits.hpp  conversion.hpp  io.hpp  list.hpp  traits.hpp
cpp/include/mamba/: bool.hpp  builtins.hpp  comparison.hpp  concepts.hpp  container_traits.hpp  conversion.hpp  dict.hpp  entity.hpp  error.hpp  float.hpp  handle.hpp  handle2.hpp  int.hpp  integer.hpp  io.hpp  iterable.hpp  iteration.hpp  iterator.hpp  list.hpp  list2.hpp  list3.hpp  mamba.hpp  none.hpp  not_null.hpp  object.hpp  reference.hpp  sequence.hpp  set.hpp  str.hpp  string.hpp  tuple.hpp  value.hpp
cpp/include/mamba/__concepts/: bool_convertible.hpp  comparable.hpp  entity.hpp  object.hpp  str_convertible.hpp  value.hpp
cpp/include/mamba/__memory/: handle.hpp  managed.hpp  read_only.hpp
cpp/include/mamba/__utils/: not_null.hpp  value_wrapper.hpp
cpp/include/mamba/alpha/: builtins.hpp  integer.hpp  io.hpp  types.hpp
cpp/include/mamba/beta/: bool.hpp  conversion.hpp  float.hpp  traits.hpp
cpp/include/mamba/builtins/: as_bool.hpp  as_str.hpp  (+17 more)
cpp/src/: CMakeLists.txt  dummy.cpp
cpp/test/: CMakeLists.txt  test_dict.cpp  test_dummy.cpp  test_iteration.cpp  test_list.cpp  test_list2.cpp  test_set.cpp  test_tuple.cpp
cpp/test/googletest-download/: CMakeLists.txt
python/src/: mambac.py
python/src/mamba/: scope.py  transpiler.py
test/: hello_world.py  hello_world.py.cpp
(+48 files in other folders)
